# MSTO

./: .env.example  .gitignore  Dockerfile  README.md  backtest.py  cli.py  docker-compose.yml  main.py  playground.ipynb  pyproject.toml
deploy/: deploy.sh  ecs-task-definition.json
msto/core/: analytics.py  data_sources.py  health.py  health_server.py  orchestrator.py
msto/strategies/: event_driven_discount_strategy.py  fundamental_event_driven.py  mean_reversion_strategy.py  qarp_strategy.py  simple_volatility.py  value_investing_strategy.py
strategies/: SimpleVolatilityStrategy.py
tests/unit/: test_analytics.py
