[project]
name = "msto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtrader>=1.9.78.123",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nltk>=3.8.1",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.3.4",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.31",
]
